--- a/index.html
+++ b/index.html
@@ -47,43 +47,40 @@
             <button type="submit" id="btnT">Pick up time.</button>
            </div>
          </form>
-         <form id="currentOrder">
+       </div>
+       <form id="neworder">
+         <h2>Customize your pie</h2>
+       <div class="form-group">
+         <label for="sizes">Pick a size!</label>
+           <checkbox name="sizes">
+              <input type="checkbox" name="sizes" value="small">A Small 10".<br>
+              <input type="checkbox" name="sizes" value="medium">A Medium 16".<br>
+              <input type="checkbox" name="sizes" value="large">A Large 20".<br>
+              <input type="checkbox" name="sizes" value="Xlarge">A Extra Large 25".<br>
+         </div>
+         <br><br>
+         <div class="form-group">
+           <label for="toppings">Choose wisely!</label>
+           <checkbox name="toppings">
+              <input type="checkbox" name="toppings" value="meatA">Pepperoni.<br>
+              <input type="checkbox" name="toppings" value="meatB">Italian Suasage.<br>
+              <input type="checkbox" name="toppings" value="meatC">Salami.<br>
+              <input type="checkbox" name="toppings" value="meatE">Canadian Bacon.<br>
+              <input type="checkbox" name="toppings" value="cheeseA">Extra Mozzeralla.<br>
+              <input type="checkbox" name="toppings" value="cheeseB">Provalone.<br>
+              <input type="checkbox" name="toppings" value="cheeseC">Feta.<br>
+              <input type="checkbox" name="toppings" value="vegiA">Peppers.<br>
+              <input type="checkbox" name="toppings" value="vegiB">Onions.<br>
+              <input type="checkbox" name="toppings" value="vegiB">Olives.<br>
+              <input type="checkbox" name="toppings" value="vegiD">Spinach.<br>
+            </div>
+            <button type="submit" id="btnT">Make your order.</button>
+          </form>
            <div class="form-group">
              <label for="displayOrder"></label>
            </div>
-         </form>
-       </div>
-       <div class="main">
-         <form action="/action_page.php">
-           <radio name="sizes">
-              <input type="radio" name="sizes" value="small">A Small 10".</option>
-              <input type="radio" name="sizes" value="medium">A Medium 16".</option>
-              <input type="radio" name="sizes" value="large">A Large 20".</option>
-              <input type="radio" name="sizes" value="Xlarge">A Extra Large 25".</option>
-           </select>
-           <br><br>
-           <button type="submit" id="btnS">Select your size.</button>
-         </form>
-         <br><br><br>
-         <form action="/action_page.php">
-           <radio name="toppings">
-              <input type="radio" name="toppings value="meatA>Pepperoni.</option>
-              <input type="radio" name="toppings value="meatB>Italian Suasage.</option>
-              <input type="radio" name="toppings value="meatC>Salami.</option>
-              <input type="radio" name="toppings value="meatE>Canadian Bacon.</option>
-              <input type="radio" name="toppings value="cheeseA>Extra Mozzeralla.</option>
-              <input type="radio" name="toppings value="cheeseB>Provalone.</option>
-              <input type="radio" name="toppings value="cheeseC>Feta.</option>
-              <input type="radio" name="toppings value="vegiA>Peppers.</option>
-              <input type="radio" name="toppings value="vegiB>Onions.</option>
-              <input type="radio" name="toppings value="vegiB>Olives.</option>
-              <input type="radio" name="toppings value="vegiD>Spinach.</option>
-           </select>
-           <br><br>
-           <button type="submit" id="btnT">Select your Toppings.</button>
-         </form>
      <div class="currentOrder">
-     <h2>Current Order</h2>
+     <h3>Current Order</h3>
      <p id="currentOrder"> </p>
      </div>
   </body>
