--- a/index.html
+++ b/index.html
@@ -14,74 +14,72 @@
      <h1>Bitza Pizza</h1>
      <p>We ONLY do carry out. Gas aint cheap.</p>
    </div>
-     <div class="row">
-       <div class="side">
-         <form id ="neworder">
-           <div class="form-group">
-             <label for="name">Name for order.</label>
-             <input type="text" id="name">
-             <br><br>
-            <select name="time">
-              <option value="12">12:00 PM</option>
-              <option value="12">12:30 PM</option>
-              <option value="1">1:00 PM</option>
-              <option value="1">1:30 PM</option>
-              <option value="2">2:00 PM</option>
-              <option value="2">2:30 PM</option>
-              <option value="3">3:00 PM</option>
-              <option value="3">3:30 PM</option>
-              <option value="4">4:00 PM</option>
-              <option value="4">4:30 PM</option>
-              <option value="5">5:00 PM</option>
-              <option value="5">5:30 PM</option>
-              <option value="6">6:00 PM</option>
-              <option value="6">6:30 PM</option>
-              <option value="7">7:00 PM</option>
-              <option value="7">7:30 PM</option>
-              <option value="8">8:00 PM</option>
-              <option value="8">8:30 PM</option>
-              <option value="9">9:00 PM</option>
-              <option value="9">9:30 PM</option>
-              <option value="10">10:00 PM</option>
-            </select>
-            <button type="submit" id="btnT">Pick up time.</button>
-           </div>
-         </form>
-       </div>
-       <form id="neworder">
-         <h2>Customize your pie</h2>
+    <form id ="neworder">
+      <div class="form-group">
+        <label for="name">Name for order.</label>
+        <input type="text" id="name">
+        <br><br>
+        <select name="time">
+        <option value="12">12:00 PM</option>
+        <option value="12">12:30 PM</option>
+        <option value="1">1:00 PM</option>
+        <option value="1">1:30 PM</option>
+        <option value="2">2:00 PM</option>
+        <option value="2">2:30 PM</option>
+        <option value="3">3:00 PM</option>
+        <option value="3">3:30 PM</option>
+        <option value="4">4:00 PM</option>
+        <option value="4">4:30 PM</option>
+        <option value="5">5:00 PM</option>
+        <option value="5">5:30 PM</option>
+        <option value="6">6:00 PM</option>
+        <option value="6">6:30 PM</option>
+        <option value="7">7:00 PM</option>
+        <option value="7">7:30 PM</option>
+        <option value="8">8:00 PM</option>
+        <option value="8">8:30 PM</option>
+        <option value="9">9:00 PM</option>
+        <option value="9">9:30 PM</option>
+        <option value="10">10:00 PM</option>
+        </select>
+        <button type="submit" id="btnT">Pick up time.</button>
+      </div>
+    </form>
+    <form id="neworder">
+       <h2>Customize your pie</h2>
        <div class="form-group">
-         <label for="sizes">Pick a size!</label>
-           <checkbox name="sizes">
-              <input type="checkbox" name="sizes" value="small">A Small 10".<br>
-              <input type="checkbox" name="sizes" value="medium">A Medium 16".<br>
-              <input type="checkbox" name="sizes" value="large">A Large 20".<br>
-              <input type="checkbox" name="sizes" value="Xlarge">A Extra Large 25".<br>
-         </div>
-         <br><br>
-         <div class="form-group">
-           <label for="toppings">Choose wisely!</label>
-           <checkbox name="toppings">
-              <input type="checkbox" name="toppings" value="meatA">Pepperoni.<br>
-              <input type="checkbox" name="toppings" value="meatB">Italian Suasage.<br>
-              <input type="checkbox" name="toppings" value="meatC">Salami.<br>
-              <input type="checkbox" name="toppings" value="meatE">Canadian Bacon.<br>
-              <input type="checkbox" name="toppings" value="cheeseA">Extra Mozzeralla.<br>
-              <input type="checkbox" name="toppings" value="cheeseB">Provalone.<br>
-              <input type="checkbox" name="toppings" value="cheeseC">Feta.<br>
-              <input type="checkbox" name="toppings" value="vegiA">Peppers.<br>
-              <input type="checkbox" name="toppings" value="vegiB">Onions.<br>
-              <input type="checkbox" name="toppings" value="vegiB">Olives.<br>
-              <input type="checkbox" name="toppings" value="vegiD">Spinach.<br>
-            </div>
-            <button type="submit" id="btnT">Make your order.</button>
-          </form>
-           <div class="form-group">
-             <label for="displayOrder"></label>
-           </div>
+       <label for="sizes">Pick a size!</label><br>
+          <checkbox name="sizes">
+        <input type="checkbox" name="sizes" value="small">A Small 10".<br>
+        <input type="checkbox" name="sizes" value="medium">A Medium 16".<br>
+        <input type="checkbox" name="sizes" value="large">A Large 20".<br>
+        <input type="checkbox" name="sizes" value="Xlarge">A Extra Large 25".<br>
+        </div>
+          <br><br>
+      <div class="form-group">
+        <label for="toppings">Choose wisely!</label><br>
+      <checkbox name="toppings">
+        <input type="checkbox" name="toppings" value="meatA">Pepperoni.<br>
+        <input type="checkbox" name="toppings" value="meatB">Italian Suasage.<br>
+        <input type="checkbox" name="toppings" value="meatC">Salami.<br>
+        <input type="checkbox" name="toppings" value="meatE">Canadian Bacon.<br>
+        <input type="checkbox" name="toppings" value="cheeseA">Extra Mozzeralla.<br>
+        <input type="checkbox" name="toppings" value="cheeseB">Provalone.<br>
+        <input type="checkbox" name="toppings" value="cheeseC">Feta.<br>
+        <input type="checkbox" name="toppings" value="vegiA">Peppers.<br>
+        <input type="checkbox" name="toppings" value="vegiB">Onions.<br>
+        <input type="checkbox" name="toppings" value="vegiB">Olives.<br>
+        <input type="checkbox" name="toppings" value="vegiD">Spinach<br>
+      </div>
+        <button type="submit" id="btnT">Make your order.</button>
+    </form>
+      <div class="form-group">
+      <label for="displayOrder"></label>
+      </div>
      <div class="currentOrder">
-     <h3>Current Order</h3>
+       <h3>Current Order</h3>
      <p id="currentOrder"> </p>
+      </div>
      </div>
   </body>
 </html>
