it will save customer name, pickup time, and order

--- a/index.html
+++ b/index.html
@@ -20,63 +20,62 @@
         <input type="text" id="name">
         <br><br>
         <select name="time" id="time">
-        <option value="12">12:00 PM</option>
-        <option value="12">12:30 PM</option>
-        <option value="1">1:00 PM</option>
-        <option value="1">1:30 PM</option>
-        <option value="2">2:00 PM</option>
-        <option value="2">2:30 PM</option>
-        <option value="3">3:00 PM</option>
-        <option value="3">3:30 PM</option>
-        <option value="4">4:00 PM</option>
-        <option value="4">4:30 PM</option>
-        <option value="5">5:00 PM</option>
-        <option value="5">5:30 PM</option>
-        <option value="6">6:00 PM</option>
-        <option value="6">6:30 PM</option>
-        <option value="7">7:00 PM</option>
-        <option value="7">7:30 PM</option>
-        <option value="8">8:00 PM</option>
-        <option value="8">8:30 PM</option>
-        <option value="9">9:00 PM</option>
-        <option value="9">9:30 PM</option>
-        <option value="10">10:00 PM</option>
+        <option value="12:00 PM">12:00 PM</option>
+        <option value="12:30 PM">12:30 PM</option>
+        <option value="1:00 PM">1:00 PM</option>
+        <option value="1:30 PM">1:30 PM</option>
+        <option value="2:00 PM">2:00 PM</option>
+        <option value="2:30 PM">2:30 PM</option>
+        <option value="3:00 PM">3:00 PM</option>
+        <option value="3:30 PM">3:30 PM</option>
+        <option value="4:00 PM">4:00 PM</option>
+        <option value="4:30 PM">4:30 PM</option>
+        <option value="5:00 PM">5:00 PM</option>
+        <option value="5:30 PM">5:30 PM</option>
+        <option value="6:00 PM">6:00 PM</option>
+        <option value="6:30 PM">6:30 PM</option>
+        <option value="7:00 PM">7:00 PM</option>
+        <option value="7:30 PM">7:30 PM</option>
+        <option value="8:00 PM">8:00 PM</option>
+        <option value="8:30 PM">8:30 PM</option>
+        <option value="9:00 PM">9:00 PM</option>
+        <option value="9:30 PM">9:30 PM</option>
+        <option value="10:00 PM">10:00 PM</option>
         </select>
-        <button type="submit" id="btnT">Pick up time.</button>
     </div>
        <h2>Customize your pie</h2>
     <div class="form-group">
       <label for="sizes">Pick a size!</label><br>
       <checkbox name="sizes">
-        <input type="checkbox" name="sizes" value="small">A Small 10".<br>
-        <input type="checkbox" name="sizes" value="medium">A Medium 16".<br>
-        <input type="checkbox" name="sizes" value="large">A Large 20".<br>
-        <input type="checkbox" name="sizes" value="Xlarge">A Extra Large 25".<br>
+        <input type="checkbox" name="sizes" value="8">A Small 10".<br>
+        <input type="checkbox" name="sizes" value="12">A Medium 16".<br>
+        <input type="checkbox" name="sizes" value="15">A Large 20".<br>
+        <input type="checkbox" name="sizes" value="20">A Extra Large 25".<br>
     </div>
         <br><br>
     <div class="form-group">
         <label for="toppings">Choose wisely!</label><br>
         <checkbox name="toppings">
-        <input type="checkbox" name="toppings" value="meatA">Pepperoni.<br>
-        <input type="checkbox" name="toppings" value="meatB">Italian Suasage.<br>
-        <input type="checkbox" name="toppings" value="meatC">Salami.<br>
-        <input type="checkbox" name="toppings" value="meatE">Canadian Bacon.<br>
-        <input type="checkbox" name="toppings" value="cheeseA">Extra Mozzeralla.<br>
-        <input type="checkbox" name="toppings" value="cheeseB">Provalone.<br>
-        <input type="checkbox" name="toppings" value="cheeseC">Feta.<br>
-        <input type="checkbox" name="toppings" value="vegiA">Peppers.<br>
-        <input type="checkbox" name="toppings" value="vegiB">Onions.<br>
-        <input type="checkbox" name="toppings" value="vegiB">Olives.<br>
-        <input type="checkbox" name="toppings" value="vegiD">Spinach<br>
+        <input type="checkbox" name="toppings" value="1.50">Pepperoni.<br>
+        <input type="checkbox" name="toppings" value="1.50">Italian Suasage.<br>
+        <input type="checkbox" name="toppings" value="1.50">Salami.<br>
+        <input type="checkbox" name="toppings" value="1.50">Canadian Bacon.<br>
+        <input type="checkbox" name="toppings" value="1.50">Extra Mozzeralla.<br>
+        <input type="checkbox" name="toppings" value="1.50">Provalone.<br>
+        <input type="checkbox" name="toppings" value="1.50">Feta.<br>
+        <input type="checkbox" name="toppings" value="1.50">Peppers.<br>
+        <input type="checkbox" name="toppings" value="1.50">Onions.<br>
+        <input type="checkbox" name="toppings" value="1.50">Olives.<br>
+        <input type="checkbox" name="toppings" value="1.50">Spinach<br>
     </div>
-        <button type="submit" id="btnT">Make your order.</button>
+        <button type="submit" id="pizzaOrder">Make your order.</button>
     </form>
       <div class="form-group">
       <label for="displayOrder"></label>
       </div>
      <div class="currentOrder">
        <h3>Current Order</h3>
-     <p id="currentOrder"> </p>
+       <p id="currentOrder"> </p>
       </div>
      </div>
   </body>
