working on cost logic

--- a/index.html
+++ b/index.html
@@ -47,26 +47,26 @@
     <div class="form-group">
       <label for="sizes">Pick a size!</label><br>
       <checkbox name="sizes">
-        <input type="checkbox" name="sizes" value="8">A Small 10".<br>
-        <input type="checkbox" name="sizes" value="12">A Medium 16".<br>
-        <input type="checkbox" name="sizes" value="15">A Large 20".<br>
-        <input type="checkbox" name="sizes" value="20">A Extra Large 25".<br>
+        <input type="checkbox" name="sizes" value=10>A Small 10".<br>
+        <input type="checkbox" name="sizes" value=16>A Medium 16".<br>
+        <input type="checkbox" name="sizes" value=20>A Large 20".<br>
+        <input type="checkbox" name="sizes" value=25>A Extra Large 25".<br>
     </div>
         <br><br>
     <div class="form-group">
         <label for="toppings">Choose wisely!</label><br>
         <checkbox name="toppings">
-        <input type="checkbox" name="toppings" value="1.50">Pepperoni.<br>
-        <input type="checkbox" name="toppings" value="1.50">Italian Suasage.<br>
-        <input type="checkbox" name="toppings" value="1.50">Salami.<br>
-        <input type="checkbox" name="toppings" value="1.50">Canadian Bacon.<br>
-        <input type="checkbox" name="toppings" value="1.50">Extra Mozzeralla.<br>
-        <input type="checkbox" name="toppings" value="1.50">Provalone.<br>
-        <input type="checkbox" name="toppings" value="1.50">Feta.<br>
-        <input type="checkbox" name="toppings" value="1.50">Peppers.<br>
-        <input type="checkbox" name="toppings" value="1.50">Onions.<br>
-        <input type="checkbox" name="toppings" value="1.50">Olives.<br>
-        <input type="checkbox" name="toppings" value="1.50">Spinach<br>
+        <input type="checkbox" name="toppings" value="Pepperoni">Pepperoni.<br>
+        <input type="checkbox" name="toppings" value="Italian Sausage">Italian Suasage.<br>
+        <input type="checkbox" name="toppings" value="Salami">Salami.<br>
+        <input type="checkbox" name="toppings" value="Canadian Bacon">Canadian Bacon.<br>
+        <input type="checkbox" name="toppings" value="Extra Mozzeralla">Extra Mozzeralla.<br>
+        <input type="checkbox" name="toppings" value="Provalone">Provalone.<br>
+        <input type="checkbox" name="toppings" value="Feta">Feta.<br>
+        <input type="checkbox" name="toppings" value="Peppers">Peppers.<br>
+        <input type="checkbox" name="toppings" value="Onions">Onions.<br>
+        <input type="checkbox" name="toppings" value="Olives">Olives.<br>
+        <input type="checkbox" name="toppings" value="Spinach">Spinach<br>
     </div>
         <button type="submit" id="pizzaOrder">Make your order.</button>
     </form>
